# remote-git-mcp

./: .env.example  .gitignore  README.md  install_local.sh  log.py  main.py  pyproject.toml  tools.py
remote_git_mcp/: __init__.py  log.py  main.py  tools.py
