[project]
name = "remote-git-mcp"
version = "0.1.0"
description = "Support to access remote git repo via MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp==2.12.2",
    "gitpython>=3.1.45",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["remote_git_mcp*"]
exclude = ["logs*"]

[project.scripts]
remote-git-mcp = "remote_git_mcp.main:cli_main"
